Remove sun-misc-unsafe-memory-access flag usage
The flag was added in #872 to silence a JDK 24+ Unsafe deprecation
warning. Removing it from the generated Dockerfile entrypoints, the
native-image build command, and the native builder script.